Calculate fixed offsets based on small header

--- a/fec_eregs/static/fec_eregs/scss/_components.scss
+++ b/fec_eregs/static/fec_eregs/scss/_components.scss
@@ -25,10 +25,14 @@
 
 .site-nav {
   position: relative;
+
+  .site-title {
+    width: calc(100% - 150px);
+  }
 }
 
 .site-nav__container {
-  @media(max-width: 720px) {
+  @include media(max-width ($large-screen - 1)) {
     bottom: initial;
     top: 40px;
     z-index: initial;
@@ -49,6 +53,8 @@
 .fec-disclaimer {
   @extend .disclaimer;
   width: calc(100% - 90px);
+  // We need to keep the header height fixed, don't wrap on small screens
+  @include u-truncate()
 }
 
 .breadcrumbs {
