--- a/fec_eregs/static/regulations/css/less/module/custom.less
+++ b/fec_eregs/static/regulations/css/less/module/custom.less
@@ -1,4 +1,9 @@
 /**
+ * Variables
+ */
+@mainhead_small_height: 83px; // main-head height on small devices
+
+/**
  * Font mixin overrides
  *
  * These are used within the regulations-site less.
@@ -323,5 +328,24 @@ html, body, .landing-content, .search-panel {
     display: table;
     height: auto;
     margin-top: 0;
+  }
+}
+
+@media only screen and ( max-width: 719px ) {
+  .main-head,
+  .reg-header {
+    height: @mainhead_small_height;
+  }
+
+  .landing-content,
+  .main-content,
+  .about-content {
+    margin-top: @mainhead_small_height;
+  }
+
+  .panel,
+  .panel.close,
+  .toc-head {
+    top: @mainhead_small_height;
   }
 }
